# adrian

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
cmake/: adrianConfig.cmake.in
dope/: deps.yml
dope/madronalib/src/: CMakeLists.txt
include/: adrian-allocation-thread.hpp  adrian-buffer.hpp  adrian-catch-buffer.hpp  adrian-chain.hpp  adrian-concepts.hpp  adrian-flags.hpp  adrian-ids.hpp  adrian-messages.hpp  adrian-model.hpp  adrian-peak-gate.hpp  adrian-pp.hpp  adrian-ui-events.hpp  adrian-vocab.hpp  adrian.hpp
test/: CMakeLists.txt
test/src/: main.cpp
